awsdevops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: awsdevops
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - apitest.hccloudtech.online
        - testy.hccloudtech.online
      secretName: aws-key

  rules:
    - host: apitest.hccloudtech.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbackendsvc
                port:
                  number: 80

    - host: testy.hccloudtech.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatfrontendsvc
                port:
                  number: 80
